# stock-prediction

./: .gitignore  AGENTS.md  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: ci.yml
config/: config.yaml
docs/: hybrid_rearchitecture.md  maintenance.md  model_strategy.md  ptft_vssm_analysis_20251015.md  system_design.md  test_mode_fix_progress.md  user_guide.md
scripts/: predict.py
src/stock_prediction/: app_config.py  common.py  config.py  data_preprocess.py  diagnostics.py  evaluation.py  feature_engineering.py  getdata.py  inference.py  init.py  model_builder.py  predict.py  train.py
src/stock_prediction/models/: temporal_hybrid.py
tests/: test_config.py  test_e2e_pipeline.py  test_hybrid_loss_penalties.py  test_integration.py  test_models.py
